infra/test/ecommerce-react-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-react-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-react
  template:
    metadata:
      labels:
        app: ecommerce-react
    spec:
      containers:
        - name: ecommerce-react
          image: elberthomax/ecommerce-react-test
          ports:
            - containerPort: 5173

---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-react-srv
spec:
  selector:
    app: ecommerce-react
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
